--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
-**
+<!DOCTYPE html>
+<html lang="es">
+<head>
+   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Álo | Katteyes & Sinaka — Presave Oficial</title>
+  <meta name="description" content="Haz presave de 'Álo', el nuevo lanzamiento de Katteyes junto a Sinaka. Disponible pronto en todas las plataformas digitales.">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://alo.katteyesmusic.com/">
+
+   <!-- Evita detección automática iOS -->
+  <meta name="format-detection" content="telephone=no, date=no, address=no, email=no">
+
+  
+  <!-- ========== SEO SOCIAL: OPEN GRAPH ========== -->
+  <meta property="og:type" content="music.song">
+  <meta property="og:site_name" content="Álo — Katteyes & Sinaka">
+  <meta property="og:title" content="Álo | Katteyes & Sinaka — Presave Oficial">
+  <meta property="og:description" content="Haz presave de 'Álo', el nuevo lanzamiento de Katteyes junto a Sinaka. Disponible pronto en todas las plataformas digitales.">
+  <meta property="og:url" content="https://alo.katteyesmusic.com/">
+  <meta property="og:image" content="https://alo.katteyesmusic.com/img/cover-alo.jpg">
+
+  <!-- ========== SEO SOCIAL: TWITTER / X ========== -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Álo | Katteyes & Sinaka — Presave">
+  <meta name="twitter:description" content="Haz presave de 'Álo', el nuevo lanzamiento de Katteyes junto a Sinaka.">
+  <meta name="twitter:image" content="https://alo.katteyesmusic.com/img/cover-alo.jpg">
+
+ <!-- ========== FUENTES ========== -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+
+  <!-- ========== ESTILOS ========== -->
+  <link rel="stylesheet" href="css/styles-presave.css">
+
+  <!-- ========== PRELOAD IMÁGENES CLAVE ========== -->
+  <link rel="preload" as="image" href="img/phone-presave.webp">
+  <link rel="preload" as="image" href="img/cover-alo.jpg">
+
+  <!-- ========== FAVICON ========== -->
+  <link rel="icon" type="image/png" href="img/favicon-alo.png">
+
+  <!-- ========== PERFORMANCE ========== -->
+  <meta name="view-transition" content="same-origin">
+
+</head>
+
+<body>
+  <main class="wrapper">
+
+    <!-- Imagen -->
+    <div class="visual">
+      <img src="img/phone-presave.webp" alt="Álo Presave">
+    </div>
+
+    <!-- Texto -->
+    <div class="content">
+      <p class="date">29 - 01 - 2026</p>
+      <h1>PRESAVE</h1>
+
+      <div class="links">
+        <a href="https://rimas.ffm.to/alo/presavecallback?context=pre_save&service=spotify&redirecturl&actionid&order=697a3542a25e1ee52e5eb9d9&fpEnabled=false&user=Andr%C3%A9s%20Garc%C3%ADa&status=success" target="_blank">SPOTIFY</a>
+        <a href="https://rimas.ffm.to/alo/presavecallback?context=pre_save&service=apple&redirecturl&actionid&order=697a33e4a25e1ee52e58ef3f&fpEnabled=false&user&status=success" target="_blank">APPLE MUSIC</a>
+      </div>
+    </div>
+
+  </main>
+</body>
+</html>
