--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Álo | Katteyes & Sinaka — Presave Oficial</title>
-  <meta name="description" content="Haz presave de 'Álo', el nuevo lanzamiento de Katteyes junto a Sinaka. Disponible pronto en todas las plataformas digitales.">
+  <title>aló | Katteyes & Sinaka — Presave Oficial</title>
+  <meta name="description" content="Haz presave de 'aló', el nuevo lanzamiento de Katteyes junto a Sinaka. Disponible pronto en todas las plataformas digitales.">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://alo.katteyesmusic.com/">
 
@@ -16,16 +16,16 @@
   
   <!-- ========== SEO SOCIAL: OPEN GRAPH ========== -->
   <meta property="og:type" content="music.song">
-  <meta property="og:site_name" content="Álo — Katteyes & Sinaka">
-  <meta property="og:title" content="Álo | Katteyes & Sinaka — Presave Oficial">
-  <meta property="og:description" content="Haz presave de 'Álo', el nuevo lanzamiento de Katteyes junto a Sinaka. Disponible pronto en todas las plataformas digitales.">
+  <meta property="og:site_name" content="aló — Katteyes & Sinaka">
+  <meta property="og:title" content="aló | Katteyes & Sinaka — Presave Oficial">
+  <meta property="og:description" content="Haz presave de 'aló', el nuevo lanzamiento de Katteyes junto a Sinaka. Disponible pronto en todas las plataformas digitales.">
   <meta property="og:url" content="https://alo.katteyesmusic.com/">
   <meta property="og:image" content="https://alo.katteyesmusic.com/img/cover-alo.jpg">
 
   <!-- ========== SEO SOCIAL: TWITTER / X ========== -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Álo | Katteyes & Sinaka — Presave">
-  <meta name="twitter:description" content="Haz presave de 'Álo', el nuevo lanzamiento de Katteyes junto a Sinaka.">
+  <meta name="twitter:title" content="aló | Katteyes & Sinaka — Presave">
+  <meta name="twitter:description" content="Haz presave de 'aló', el nuevo lanzamiento de Katteyes junto a Sinaka.">
   <meta name="twitter:image" content="https://alo.katteyesmusic.com/img/cover-alo.jpg">
 
  <!-- ========== FUENTES ========== -->
@@ -53,7 +53,7 @@
 
     <!-- Imagen -->
     <div class="visual">
-      <img src="img/phone-presave.webp" alt="Álo Presave">
+      <img src="img/phone-presave.webp" alt="aló Presave">
     </div>
 
     <!-- Texto -->
