--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>aló | Katteyes & Sinaka — Presave Oficial</title>
+  <title>ALO | Katteyes & Sinaka — Presave Oficial</title>
   <meta name="description" content="Haz presave de 'ALO', el nuevo lanzamiento de Katteyes junto a Sinaka. Disponible pronto en todas las plataformas digitales.">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://alo.katteyesmusic.com/">
